# DeepLearning

./: README.md  demo.ipynb  pyproject.toml
deeplearning/: __init__.py  callback.py  callback_list.py  checkpoint_handler.py  train_val_test_loop.py  trainer.py
deeplearning/callback/: __init__.py  _logging_callback.py  callback.py  callback_list.py  checkpoint_callback.py  progress_bar_callback.py  progressbar_callback.py  tensorboard_callback.py
deeplearning/train/: trainer.py
deeplearning/utils/: __init__.py  checkpoint_handler.py
runs/Nov16_16-26-17_MacBookPro.fritz.box/: events.out.tfevents.1731770777.MacBookPro.fritz.box.38891.0  events.out.tfevents.1731770777.MacBookPro.fritz.box.38891.1  events.out.tfevents.1731770777.MacBookPro.fritz.box.38891.2
