[tool.poetry]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = ["Pedro José Mora Gallegos <pedrojosemoragallegos@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
